--- a/maps.html
+++ b/maps.html
@@ -1,4 +1,4 @@
-<!-- 7/26/2016 -->
+<!-- 7/31/2016 -->
 <!DOCTYPE HTML>
 <html>
 
@@ -92,22 +92,10 @@
        Pokemon GO Maps
       </h2>
       <p>
-       Remember that these are a work in progress, and may not be entirely correct. I
-       am updating them constantly, and if you find any issues be sure to contact
-       me <a href="http://www.nickolasgupton.me/index.html#contact">here</a>!
+		With the most recent update to Pokemon GO, Niantic has made it impossible for sites like these to run.
+		They have closed their API, and at the same time removed the steps from the nearby list, both were essential to making these work.
+		I am investigating other ways to get this back up, but in the mean time you can read more about it <a href="http://kotaku.com/pokevision-and-other-pokemon-go-trackers-seem-to-have-b-1784602025">here</a>.
        <br />
-
-       <h4>Pennsylvania:</h4>
-       <a href="http://pokemon-go-canonsburg-map.herokuapp.com/">Canonsburg</a>
-       <br />
-       <br />
-
-       <h4>Texas:</h4>
-       <a href="http://pokemon-go-magnolia-map.herokuapp.com/">Magnolia</a>
-       <br />- <a href="http://pokemon-go-highmeadow-map.herokuapp.com/">High Meadow</a>
-       <br />
-       <a href="http://pokemon-go-tomball-map.herokuapp.com/">Tomball</a>
-       <br>
       </p>
      </header>
     </div>
