--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!-- 7/26/2016 -->
+<!-- 8/7/2016 -->
 <!DOCTYPE HTML>
 <html>
 
@@ -116,6 +116,15 @@
  <script src="assets/js/util.js"></script>
  <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
  <script src="assets/js/main.js"></script>
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-66832514-1', 'auto');
+  ga('send', 'pageview');
+ </script>
 
 </body>
 
