--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <span class="label">Steam</span>
      </a>
     </li>
-    <!--li>  Havent used this in a long time
+    <!--li>  Haven't used this in a long time
       <a href="http://CorruptComputer.tumblr.com" class="icon fa-tumblr" target="_blank">
        <span class="label">Tumblr</span>
       </a>
@@ -93,9 +93,8 @@
     <div class="container">
      <header class="major">
       <h2>Hello!</h2>
-      <p>I just graduated high school, and I love to program. I will be attending
-       Angelo State University for Computer Science, because of my love of technology
-       I will be specializing in Cyber Security.</p>
+      <p>Not much to say really, I just love to program. I am attending
+       Angelo State University for Computer Science.</p>
      </header>
     </div>
    </section>
@@ -112,6 +111,12 @@
       <li class="fa-desktop">Building & Fixing Computers</li>
       <li class="fa-gamepad">Playing Video Games</li>
       <li class="fa-trophy">Obsessively Collecting Achievements</li>
+     </ul>
+     <h3>Stuff I'm trying to learn</h3>
+     <ul class="feature-icons">
+      <li class="fa-diamond">Ruby/Rails</li>
+      <li class="fa-code">Python</li>
+      <li class="fa-code">C#</li>
      </ul>
     </div>
    </section>
