--- a/network-effect/index.html
+++ b/network-effect/index.html
@@ -4,8 +4,8 @@
 <head>
  <title>Network Effect</title>
 
- <script src="TweenMax.js"></script>
- <script src="EasePack.js"></script>
+ <script src="TweenLite.min.js"></script>
+ <script src="EasePack.min.js"></script>
 </head>
 
 <body style="background-color: #000000">
