--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
       <div style="display:none">
        <input type="hidden" name="_subject" value="New submission!">
-       <input type="hidden" name="_next" value="http://nickolasgupton.me/thanks.html">
+       <input type="hidden" name="_next" value="http://www.nickolasgupton.me/thanks.html">
        <input type="text" name="_gotcha">
       </div>
       <div class="row uniform">
