404 changes not found

--- a/404.html
+++ b/404.html
@@ -81,9 +81,8 @@
 
   <!-- Main -->
   <div id="main">
-
    <!-- One -->
-   <section id="one">
+   <section id="one" style="background-image: url(images/glitch.gif); background-repeat: no-repeat; background-size: cover;">
     <div class="container">
      <header class="major">
       <h2>
