--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <h1 id="logo"><a href="#">Nickolas Gupton</a>
    </h1>
    <p>When I'm not playing video games, you can usually find me
-    <strike>breaking</strike> fixing some programs.</p>
+    <strike>breaking things</strike> programming.</p>
   </header>
   <nav id="nav">
    <ul>
@@ -114,9 +114,10 @@
      </ul>
      <h3>Stuff I'm trying to learn</h3>
      <ul class="feature-icons">
-      <li class="fa-diamond">Ruby/Rails</li>
+      <li class="fa-diamond">Ruby</li>
       <li class="fa-code">Python</li>
       <li class="fa-code">C#</li>
+      <li class="fa-code">Haxe</li>
      </ul>
     </div>
    </section>
