--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <title>Nickolas Gupton</title>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
- <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+ <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.min.js"></script><![endif]-->
  <link rel="stylesheet" href="assets/css/main.css" />
  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
