--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
  <section id="header">
   <header>
    <span class="image avatar">
-    <img src="images/avatar.png" alt="" />
+    <img src="images/avatar.jpg" alt="" />
    </span>
    <h1 id="logo"><a href="#">Nickolas Gupton</a>
    </h1>
