--- a/index.html
+++ b/index.html
@@ -105,19 +105,16 @@
      <h3>Things I Can Do</h3>
      <p>Currently my skills are limited, but I am happy to learn almost anything.</p>
      <ul class="feature-icons">
-      <li class="fa-code">Java, HTML, CSS, JavaScript</li>
+      <li class="fa-code">Java, Web</li>
       <li class="fa-android">Android Development</li>
       <li class="fa-code-fork">Git</li>
-      <li class="fa-desktop">Building & Fixing Computers</li>
-      <li class="fa-gamepad">Playing Video Games</li>
-      <li class="fa-trophy">Obsessively Collecting Achievements</li>
+      <li class="fa-map">Byond Mapping</li> <!-- Not really a marketable skill, but I can do it -->
      </ul>
-     <h3>Stuff I'm trying to learn</h3>
+     <h3>Stuff I am learning</h3>
      <ul class="feature-icons">
       <li class="fa-diamond">Ruby</li>
-      <li class="fa-code">Python</li>
+      <li class="fa-cog">Rust</li>
       <li class="fa-code">C#</li>
-      <li class="fa-code">Haxe</li>
      </ul>
     </div>
    </section>
