--- a/index.html
+++ b/index.html
@@ -1,227 +1,67 @@
-<!-- 1/6/2017 -->
-<!DOCTYPE HTML>
-<html>
+---
+layout: default
 
-<head>
- <title>Nickolas Gupton</title>
- <meta charset="utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1" />
- <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.min.js"></script><![endif]-->
- <link rel="stylesheet" href="assets/css/main.css" />
- <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+features1:
+- icon: fa-code
+  content: Java, C++, Web
+- icon: fa-code-fork
+  content: Git
+- icon: fa-android
+  content: Android Development
+- icon: fa-map
+  content: Byond Mapping
 
- <!-- Icons -->
- <link rel="shortcut icon" href="favicon.ico" />
+features2:
+- icon: fa-diamond
+  content: Ruby
+- icon: fa-code
+  content: C#
+- icon: fa-cog
+  content: Rust
+- icon: fa-gamepad
+  content: Unreal Engine
 
- <link rel="icon" href="favicon-32.png" sizes="32x32">
 
- <link rel="apple-touch-icon" href="favicon-152.png">
+posts:
+- image: /images/new site.png
+  title: New Site Design!
+  excerpt: More about why I wanted this new design.
+  url: "/website/2017/01/13/new-site-design.html"
+---
 
- <meta name="msapplication-TileColor" content="#4acaa8">
- <meta name="msapplication-TileImage" content="favicon-152.png">
-</head>
-
-<body>
-
- <!-- Header -->
- <section id="header">
-  <header>
-   <span class="image avatar">
-    <img src="images/avatar.jpg" alt="" />
-   </span>
-   <h1 id="logo"><a href="#">Nickolas Gupton</a>
-   </h1>
-   <p>When I'm not playing video games, you can usually find me
-    <strike>breaking things</strike> programming.</p>
-  </header>
-  <nav id="nav">
-   <ul>
-    <li><a href="#one" class="active">About Me</a>
-    </li>
-    <li><a href="#two">Things I Can Do</a>
-    </li>
-    <li><a href="#three">My Work</a>
-    </li>
-    <li><a href="#four">Contact</a>
-    </li>
-   </ul>
-  </nav>
-  <footer>
-   <ul class="icons">
-    <li>
-     <a href="https://github.com/CorruptComputer" class="icon fa-github-alt" target="_blank">
-      <span class="label">Github</span>
-     </a>
-    </li>
-    <li>
-     <a href="http://steamcommunity.com/id/CorruptComputer" class="icon fa-steam" target="_blank">
-      <span class="label">Steam</span>
-     </a>
-    </li>
-    <li>
-      <a href="http://CorruptComputer.tumblr.com" class="icon fa-tumblr" target="_blank">
-       <span class="label">Tumblr</span>
-      </a>
-     </li>
-    <!--li> Never use it
-      <a href="http://twitter.com/CorruptComputer" class="icon fa-twitter" target="_blank">
-       <span class="label">Twitter</span>
-      </a>
-     </li-->
-    <li>
-     <a href="http://plus.google.com/+NickolasGupton" class="icon fa-google-plus" target="_blank">
-      <span class="label">Google+</span>
-     </a>
-    </li>
-    <!--li> No videos yet
-      <a href="https://www.youtube.com/c/NickolasGupton" class="icon fa-youtube" target="_blank">
-       <span class="label">YouTube</span>
-      </a>
-     </li-->
-   </ul>
-  </footer>
- </section>
-
- <!-- Wrapper -->
- <div id="wrapper">
-
-  <!-- Main -->
-  <div id="main">
-
-   <!-- One -->
-   <section id="one">
-    <div class="container">
-     <header class="major">
-      <h2>Hello!</h2>
-      <p>Not much to say really, I just love to program. I am attending
-       Angelo State University for Computer Science.</p>
-     </header>
-    </div>
-   </section>
-
-   <!-- Two -->
-   <section id="two">
-    <div class="container">
-     <h3>Things I Can Do</h3>
-     <p>Currently my skills are limited, but I am happy to learn almost anything.</p>
-     <ul class="feature-icons">
-      <li class="fa-code">Java, Web</li>
-      <li class="fa-android">Android Development</li>
-      <li class="fa-code-fork">Git</li>
-      <li class="fa-map">Byond Mapping</li> <!-- Not really a marketable skill, but I can do it -->
-     </ul>
-     <h3>Stuff I am learning</h3>
-     <ul class="feature-icons">
-      <li class="fa-diamond">Ruby</li>
-      <li class="fa-cog">Rust</li>
-      <li class="fa-code">C#</li>
-     </ul>
-    </div>
-   </section>
-
-   <!-- Three -->
-   <section id="three">
-    <div class="container">
-     <h3>My Work</h3>
-     <div class="features">
-      <article>
-       <a href="https://tgstation13.org" class="image" target="_blank">
-        <img src="images/ss13.png" alt="">
-       </a>
-       <div class="inner">
-        <h4>
-         Space Station 13
-        </h4>
-        <p>
-         Space Station 13 is an open source survival game in which you can play as various
-         roles to either help or sabotauge the station, depending on if you are
-         an antagonist for the round.
-         <br />
-         <a href="https://tgstation13.org/wiki/AsteroidStation" target="_blank">AsteroidStation</a> was
-         my main focus when I was active in the community, however the map has
-         since been removed.
-        </p>
-       </div>
-      </article>
-     </div>
-    </div>
-   </section>
-
-   <!-- Four -->
-   <section id="four">
-    <div class="container">
-     <h3>
-      Contact Me
-     </h3>
-     <form action="http://formspree.io/contact@nickolasgupton.me" method="post">
-      <div class="row uniform">
-       <div class="6u 12u(xsmall)">
-        <input type="text" name="name" id="name" placeholder="Name" />
-       </div>
-       <div class="6u 12u(xsmall)">
-        <input type="email" name="email" id="email" placeholder="Email" />
-       </div>
-      </div>
-      <div class="row uniform">
-       <div class="12u">
-        <input type="text" name="_subject" id="subject" placeholder="Subject" />
-       </div>
-      </div>
-      <div class="row uniform">
-       <div class="12u">
-        <textarea name="message" id="message" placeholder="Message" rows="6"></textarea>
-       </div>
-      </div>
-      <div style="display:none">
-       <input type="hidden" name="_subject" value="New submission!">
-       <input type="hidden" name="_next" value="http://www.nickolasgupton.me/thanks.html">
-       <input type="text" name="_gotcha">
-      </div>
-      <div class="row uniform">
-       <div class="12u">
-        <ul class="actions">
-         <li>
-          <input type="submit" class="special" value="Send Message" />
-         </li>
-         <li>
-          <input type="reset" value="Reset Form" />
-         </li>
-        </ul>
-       </div>
-      </div>
-     </form>
-    </div>
-   </section>
+<!-- Banner -->
+<section id="banner">
+  <div class="content">
+    <header>
+      <h1>Hello!</h1>
+      <p>When I'm not playing video games, you can usually find me <strike>breaking things</strike> programming.</p>
+    </header>
+    <p>Not much to say really, I just love to program. I am attending Angelo State University for Computer Science.</p>
   </div>
+  <span class="image object">
+		<img src="{{ site.baseurl }}/images/lion.jpg" alt="" />
+	</span>
+</section>
 
-  <!-- Footer -->
-  <section id="footer">
-   <div class="container">
-    <ul class="copyright">
-     <li>&copy; Nickolas Gupton. All rights reserved.</li>
-    </ul>
-   </div>
-  </section>
- </div>
+<!-- Section -->
+<section>
+  <header class="major">
+    <h2>Things I can do!</h2>
+  </header>
+  <p>I don't claim to be an expert is these, but I can do stuff with them.</p>
+  {% include components/features.html features=page.features1 %}
 
- <!-- Scripts -->
- <script src="assets/js/jquery.min.js"></script>
- <script src="assets/js/jquery.scrollzer.min.js"></script>
- <script src="assets/js/jquery.scrolly.min.js"></script>
- <script src="assets/js/skel.min.js"></script>
- <script src="assets/js/util.js"></script>
- <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
- <script src="assets/js/main.js"></script>
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <header class="major">
+    <h2>Things I am learning!</h2>
+  </header>
+  <p>I am happy to learn almost anything, but these are what I am learning right now.</p>
+  {% include components/features.html features=page.features2 %}
+</section>
 
-  ga('create', 'UA-66832514-1', 'auto');
-  ga('send', 'pageview');
- </script>
-
-</body>
-
-</html>
+<!-- Section -->
+<section>
+  <header class="major">
+    <h2>Featured blog posts!</h2>
+  </header>
+  {% include components/posts.html posts=page.posts %}
+</section>
