--- a/thanks.html
+++ b/thanks.html
@@ -1,133 +1,9 @@
-<!-- 1/6/2017 -->
-<!DOCTYPE HTML>
-<html>
+---
+layout: page
+---
 
-<head>
- <title>Nickolas Gupton</title>
- <meta charset="utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1" />
- <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.min.js"></script><![endif]-->
- <link rel="stylesheet" href="assets/css/main.css" />
- <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+<header class="main">
+	<h1>Thanks!</h1>
+</header>
 
- <!-- Icons -->
- <link rel="shortcut icon" href="favicon.ico" />
-
- <link rel="icon" href="favicon-32.png" sizes="32x32">
-
- <link rel="apple-touch-icon" href="favicon-152.png">
-
- <meta name="msapplication-TileColor" content="#4acaa8">
- <meta name="msapplication-TileImage" content="favicon-152.png">
-</head>
-
-<body>
-
- <!-- Header -->
- <section id="header">
-  <header>
-   <span class="image avatar">
-    <img src="images/avatar.jpg" alt="" />
-   </span>
-   <h1 id="logo"><a href="#">Nickolas Gupton</a>
-   </h1>
-   <p>When I'm not playing video games, you can usually find me
-    <strike>breaking</strike> fixing some programs.</p>
-  </header>
-  <nav id="nav">
-   <ul>
-    <li>
-     <a href="index.html">Home</a>
-    </li>
-   </ul>
-  </nav>
-  <footer>
-   <ul class="icons">
-    <li>
-     <a href="https://github.com/CorruptComputer" class="icon fa-github-alt" target="_blank">
-      <span class="label">Github</span>
-     </a>
-    </li>
-    <li>
-     <a href="http://steamcommunity.com/id/CorruptComputer" class="icon fa-steam" target="_blank">
-      <span class="label">Steam</span>
-     </a>
-    </li>
-    <li>
-      <a href="http://CorruptComputer.tumblr.com" class="icon fa-tumblr" target="_blank">
-       <span class="label">Tumblr</span>
-      </a>
-     </li>
-    <!--li> Never use it
-      <a href="http://twitter.com/CorruptComputer" class="icon fa-twitter" target="_blank">
-       <span class="label">Twitter</span>
-      </a>
-     </li-->
-    <li>
-     <a href="http://plus.google.com/+NickolasGupton" class="icon fa-google-plus" target="_blank">
-      <span class="label">Google+</span>
-     </a>
-    </li>
-    <!--li> No videos yet
-      <a href="https://www.youtube.com/c/NickolasGupton" class="icon fa-youtube" target="_blank">
-       <span class="label">YouTube</span>
-      </a>
-     </li-->
-   </ul>
-  </footer>
- </section>
-
-
- <!-- Wrapper -->
- <div id="wrapper">
-
-  <!-- Main -->
-  <div id="main">
-
-   <!-- One -->
-   <section id="one">
-    <div class="container">
-     <header class="major">
-      <h2>
-       Thank you!
-      </h2>
-      <p>
-       Your submission had been recieved.
-       <br>
-      </p>
-     </header>
-    </div>
-   </section>
-  </div>
-
-  <!-- Footer -->
-  <section id="footer">
-   <div class="container">
-    <ul class="copyright">
-     <li>&copy; Nickolas Gupton. All rights reserved.</li>
-    </ul>
-   </div>
-  </section>
- </div>
-
- <!-- Scripts -->
- <script src="assets/js/jquery.min.js"></script>
- <script src="assets/js/jquery.scrollzer.min.js"></script>
- <script src="assets/js/jquery.scrolly.min.js"></script>
- <script src="assets/js/skel.min.js"></script>
- <script src="assets/js/util.js"></script>
- <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
- <script src="assets/js/main.js"></script>
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-66832514-1', 'auto');
-  ga('send', 'pageview');
- </script>
-
-</body>
-
-</html>
+<p>Your input has been recieved and you should get a reply within a couple days.</p>
