Small update, changelog here: http://www.nickolasgupton.me/website/2017/02/24/update.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ features2:
 
 
 posts:
-- image: /images/new site.png
+- image: /images/blog/new site.png
   title: New Site Design!
   excerpt: More about why I wanted this new design.
   url: "/website/2017/01/13/new-site-design.html"
