Remove's some old stuff

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@ features1:
   content: Byond Mapping
 
 features2:
-- icon: fa-diamond
-  content: Ruby
-- icon: fa-code
-  content: C#
 - icon: fa-cog
   content: Rust
 - icon: fa-gamepad
@@ -48,7 +44,7 @@ posts:
   <header class="major">
     <h2>Things I can do!</h2>
   </header>
-  <p>I don't claim to be an expert is these, but I can do stuff with them.</p>
+  <p>I don't claim to be an expert is these, but I can do some stuff with them.</p>
   {% include components/features.html features=page.features1 %}
 
   <header class="major">
