New blog post Minor blog URL changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 
 features1:
 - icon: fa-code
-  content: Java, C++, Web
+  content: Java, C++, Basic Web
 - icon: fa-code-fork
   content: Git
 - icon: fa-android
@@ -19,10 +19,15 @@ features2:
 
 
 posts:
+- image: /images/blog/digital ocean discord bot.png
+  title: Digital Ocean and a Discord Bot
+  excerpt: If anyone has ever used NadekoBot, you know that its great. But you know what could make it even better? Being 24/7.
+  url: "/2017/03/31/discord-bot.html"
+  
 - image: /images/blog/new site.png
   title: New Site Design!
   excerpt: More about why I wanted this new design.
-  url: "/website/2017/01/13/new-site-design.html"
+  url: "/2017/01/13/new-site-design.html"
 ---
 
 <!-- Banner -->
