Feature blog post on main page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ features2:
 
 
 posts:
+- image: /images/blog/GNOME desktop.png
+  title: My Adventures with Linux
+  excerpt: I love Linux, but there are so many different distributions. So how can I know if my current one is my favorite if I don’t try them all?
+  url: "/2017/04/26/linux.html"
+
 - image: /images/blog/digital ocean discord bot.png
   title: Digital Ocean and a Discord Bot
   excerpt: If anyone has ever used NadekoBot, you know that its great. But you know what could make it even better? Being 24/7.
@@ -28,6 +33,7 @@ posts:
   title: New Site Design!
   excerpt: More about why I wanted this new design.
   url: "/2017/01/13/new-site-design.html"
+
 ---
 
 <!-- Banner -->
