Update bio and more acurately reflect what I'm currently doing/learning

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ features1:
   content: Java, C++, Basic Web
 - icon: fa-code-fork
   content: Git
-- icon: fa-android
-  content: Android Development
-- icon: fa-map
-  content: Byond Mapping
+- icon: fa-linux
+  content: Linux
+- icon: fa-server
+  content: Servers and Networking
 
 features2:
-- icon: fa-cog
-  content: Rust
+- icon: fa-code
+  content: Advanced C++
 - icon: fa-gamepad
-  content: Unreal Engine
+  content: Godot Engine
 
 
 posts:
@@ -40,10 +40,13 @@ posts:
 <section id="banner">
   <div class="content">
     <header>
-      <h1>Hello!</h1>
-      <p>When I'm not playing video games, you can usually find me <strike>breaking things</strike> programming.</p>
+      <h1>Who am I?</h1>
     </header>
-    <p>Not much to say really, I just love to program. I am attending Angelo State University for Computer Science.</p>
+    <p>I'm currently a student at Angelo State University, studying Computer Science.
+      I started programming in high school, and had a great teacher.
+      My first language was Java and I will always remember my first <code>Hello world!</code>, ever since I have been trying to learn everything I can about programming.
+      I have become fascinated by the fact that computers are only limited to the knowledge and skill of the developer, there's almost no end to what is possible.
+    </p>
   </div>
   <span class="image object">
 		<img src="{{ site.baseurl }}/images/lion.jpg" alt="" />
@@ -61,7 +64,7 @@ posts:
   <header class="major">
     <h2>Things I am learning!</h2>
   </header>
-  <p>I am happy to learn almost anything, but these are what I am learning right now.</p>
+  <p>I love to learn and am happy to learn almost anything, but these are what I am learning right now.</p>
   {% include components/features.html features=page.features2 %}
 </section>
 
