--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ layout: page
 	<h1>404: Page not found</h1>
 </header>
 
-<span class="image"><img src="{{ site.baseurl }}/images/404.png" alt="" /></span>
+<span class="image"><img src="{{ site.baseurl }}/images/404.png" alt="404 Image not found." /></span>
 
 <p>The page may have moved, or never have been here to begin with. ¯\_(ツ)_/¯</p>
