--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ posts:
     </p>
   </div>
   <span class="image object">
-		<img src="{{ site.baseurl }}/images/lion.jpg" alt="" />
+		<img src="{{ site.baseurl }}/images/lion.jpg" alt="Banner image" />
 	</span>
 </section>
 
