Unreal > Godot Fix a couple Travis issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ features2:
 - icon: fa-code
   content: Advanced C++
 - icon: fa-gamepad
-  content: Godot Engine
+  content: Unreal Engine 4
 
 
 posts:
