--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ posts:
 <!-- Section -->
 <section>
   <header class="major">
-      <h2>Things I currently working on!</h2>
+      <h2>Things I'm currently working on!</h2>
     </header>
     <p>Some of my current projects.</p>
     {% include components/features.html features=page.currentprojects %}
