Better design incoming

--- a/index.html
+++ b/index.html
@@ -1,70 +1,90 @@
 ---
-layout: default
+layout: default-home
 ---
 
-<div id="content">
-  <div class="bigBox">
-    <h2>Projects I've worked on!</h2>
-    <div class="row">
-      <fieldset>
-        <legend>In Development</legend>
-        <h3><i class="fa fa-graduation-cap" aria-hidden="true"></i><a href="http://www.angelo.edu/">College!</a></h3>
-        <p>I am currently a college student at Angelo State University, studying Computer Science. I started programming in high school, and had a great teacher. My first language was Java and I will always remember my first <code>Hello world!</code>
-          It has inspired me to learn everything I can about programming and I have realized that computers are only limited to the knowledge and skill of the developer, there's almost no end to what is possible!
-        </p>
-      </fieldset>
-      <fieldset>
-        <legend>Finished, still active</legend>
-        <h3><a href="https://github.com/CorruptComputer/Officer-Beepsky">Officer-Beepsky</a>:</h3>
-        <p>Officer-Beepsky is an open source Discord bot. I made it for some friends and me to use in order to play music and manage our server. It is built with <a href="https://github.com/austinv11/Discord4J">Discord4J</a> as its main API to use to
-          connect to Discord.
-        </p>
-
-        <h3><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io">My Website</a>:</h3>
-        <p>The site you're currently looking at. I am not a frontend developer, but I hope it still looks alright!
-        </p>
-      </fieldset>
-      <fieldset>
-        <legend>Finished, EOL</legend>
-        <h3><a href="https://tgstation13.org/wiki/AsteroidStation">/tg/ Station 13: Asteroid Station</a>:</h3>
-        <p>Asteroid Station was a collaborative effort between myself and <a href="https://github.com/Jordie0608">Jordie0608</a>. It was an ambitious project, a large space station set inside of an Asteroid, and it was fairly popular during its lifetime,
-          however was never completely finished and now with the codebase moving on without it, it sadly is no longer maintained.
-        </p>
-      </fieldset>
+<h2>Projects I've worked on:</h2>
+<div class="row">
+    <div class="box">
+        <h2>In Development</h2><hr />
+        <div>
+            <h4><a href="https://www.angelo.edu/">College!</a></h4>
+            <p>
+                I am currently a college student at Angelo State University, studying Computer Science. 
+                I started programming in high school, and had a great teacher. 
+                My first language was Java and I will always remember my first Hello world! 
+                It has inspired me to learn everything I can about programming and I have realized that 
+                computers are only limited to the knowledge and skill of the developer, there's almost no end to what is possible!
+                <br />Used: Assembly, C++, C#, Java, JavaScript, Unity3D
+            </p>
+        </div>
     </div>
-  </div>
-
-  <div class="line"></div>
-
-  <div class="bigBox">
-    <h2>What I can do!</h2>
-    <p>These are all relative to each other, so just because I use it a lot doesn't mean I'm an expert.</p>
-    <div class="row">
-      <fieldset>
-        <legend>Plan on learning</legend>
-        <p><i class="fa fa-code" aria-hidden="true"></i>Python</p>
-        <p><i class="fa fa-server" aria-hidden="true"></i>Machine Learning/Neural Networks</p>
-      </fieldset>
-      <fieldset>
-        <legend>Currently learning</legend>
-        <p><i class="fa fa-code" aria-hidden="true"></i>Rust</p>
-        <p><i class="fa fa-code" aria-hidden="true"></i>Bootstrap</p>
-        <p><i class="fa fa-gamepad" aria-hidden="true"></i>Unreal Engine</p>
-      </fieldset>
-      <fieldset>
-        <legend>Somewhat Competent</legend>
-        <p><i class="fa fa-code" aria-hidden="true"></i>Ruby/Jekyll</p>
-        <p><i class="fa fa-code" aria-hidden="true"></i>HTML/CSS/JS</p>
-        <p><i class="fa fa-gamepad" aria-hidden="true"></i>Unity3D</p>
-      </fieldset>
-      <fieldset>
-        <legend>I use these a lot</legend>
-        <p><i class="fa fa-code" aria-hidden="true"></i>C++</p>
-        <p><i class="fa fa-code" aria-hidden="true"></i>Java</p>
-        <p><i class="fa fa-linux" aria-hidden="true"></i>Linux</p>
-        <p><i class="fa fa-code-fork" aria-hidden="true"></i>Git</p>
-      </fieldset>
+    <div class="box">
+        <h2>Maintaining</h2><hr />
+        <div>
+            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky">Officer-Beepsky</a>:</h4>
+            <p>
+                Officer-Beepsky is an open source Discord bot. 
+                I made it for some friends and me to use in order to play music and manage our server. 
+                It is built with Discord4J as its main API to use to connect to Discord.
+                <br />Used: Bash, Git, Gradle, Java, PowerShell
+            </p>
+            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io">My Website</a>:</h4>
+            <p>
+                The site you're currently looking at. 
+                I am not a frontend developer, but I hope it still looks alright!
+                <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
+            </p>
+        </div>
     </div>
-  </div>
-  <div class="line"></div>
+    <div class="box">
+        <h2>End of Life</h2><hr />
+        <div>
+            <h4><a href="https://github.com/tgstation/tgstation">/tg/ Station 13: Asteroid Station</a>:</h4>
+            <p>
+                Asteroid Station was a collaborative effort between myself and Jordie0608. 
+                It was an ambitious project, a large space station set inside of an Asteroid, and it was fairly popular during its lifetime. 
+                Sadly however was never completely finished and now with the codebase moving on without it, it sadly is no longer maintained.
+                <br />Used: BYOND DreamMaker, Git
+            </p>
+        </div>
+    </div>
+</div>
+
+<h2>Skills I've picked up over the years:</h2>
+<div class="row">
+    <div class="box">
+        <h2>Want to learn</h2><hr />
+        <ul>
+            <li>Python</li>
+            <li>Go</li>
+            <li>Haskell</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Currently learning</h2><hr />
+        <ul>
+            <li>Rust</li>
+            <li>Active Directory</li>
+            <li>VMware vCenter</li>
+            <li>Solarwinds</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Somewhat competent</h2><hr />
+        <ul>
+            <li>Ruby/Jekyll</li>
+            <li>HTML/CSS/JavaScript</li>
+            <li>Unity3D</li>
+            <li>G-Suite</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>I use these a lot</h2><hr />
+        <ul>
+            <li>C++</li>
+            <li>Java</li>
+            <li>Linux</li>
+            <li>Git</li>
+        </ul>
+    </div>
 </div>
