Add work experience Refactor some CSS Made the monkey do a loop-de-loop

--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,22 @@ layout: default-contact
 ---
 
 <h2>Ways you can get in contact with me:</h2>
-<div class="box">
-    <h4>Discord: CorruptComputer#0001</h4>
-    <p>I use Discord a lot, and this is probably the fastest way to get in contact with me.
-    </p><hr />
+<div class="row">
+   <div class="box">
+       <h4>Discord: CorruptComputer#0001</h4>
+       <p>I use Discord a lot, and this is probably the fastest way to get in contact with me.
+       </p><hr />
 
-    <h4>Email: <a href="mailto:nickolas@gupton.xyz">nickolas@gupton.xyz</a></h4>
-    <p>If you'd prefer, I also have an email. I check this once a week, or whenever I remember to.
-    </p><hr />
+       <h4>Email: <a href="mailto:nickolas@gupton.xyz">nickolas@gupton.xyz</a></h4>
+       <p>If you'd prefer, I also have an email. This is a more guaranteed way to get in contact with me, as I will see a notification as soon as I recieve it.
+       </p><hr />
 
-    <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/">Nickolas Gupton</a></h4>
-    <p>This should gove you some more info about me if you're looking for business reasons or just want to see where I currently work.
-    </p><hr />
+       <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/">Nickolas Gupton</a></h4>
+       <p>This should gove you some more info about me if you're looking for business reasons or just want to see where I currently work.
+       </p><hr />
 
-    <h4>GitHub: <a href="https://github.com/CorruptComputer">CorruptComputer</a></h4>
-    <p>Not really a way to contact me unless you want to just open an issue on a project of mine. But you can see what I have been working on here.
-    </p><hr />
+       <h4>GitHub: <a href="https://github.com/CorruptComputer">CorruptComputer</a></h4>
+       <p>Not really a way to contact me unless you want to just open an issue on a project of mine. But you can see what I have been working on here.
+       </p><hr />
+   </div>
 </div>
