--- a/index.html
+++ b/index.html
@@ -2,6 +2,99 @@
 layout: default-home
 ---
 
+<div class="row">
+   <div class="box">
+   <h2>Hello!</h2><hr />
+   <p>
+      I started programming in high school, and had a great teacher. 
+      My first language was Java and I will always remember my first <code>Hello world!</code>, 
+      ever since I have been trying to learn everything I can about programming. 
+      I love the fact that computers are only limited to the knowledge and skill of the developer, and there is almost no end to what is possible!
+      <br />Below you will find some more information about me and what I am currently doing:
+   </p>
+   </div>
+</div>
+
+
+<h2>Skills I've picked up over the years:</h2>
+<div class="row">
+    <div class="box">
+        <h2>Want to learn</h2><hr />
+        <ul>
+            <li>Python</li>
+            <li>Go</li>
+            <li>Haskell</li>
+            <li>Computer Vision</li>
+            <li>Machine Learning</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Currently learning</h2><hr />
+        <ul>
+            <li>VMware vCenter</li>
+            <li>Windows Server Management</li>
+            <li>Linux Server Management</li>
+            <li>Solarwinds</li>
+            <li>SCCM</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>Somewhat competent</h2><hr />
+        <ul>
+            <li>Ruby/Jekyll</li>
+            <li>Unity3D</li>
+            <li>Unreal Engine</li>
+            <li>SQL</li>
+            <li>Active Directory</li>
+            <li>Group Policy Management</li>
+            <li>Powershell</li>
+            <li>G-Suite</li>
+        </ul>
+    </div>
+    <div class="box">
+        <h2>I use these a lot</h2><hr />
+        <ul>
+            <li>C++</li>
+            <li>Java</li>
+            <li>HTML/CSS/JavaScript</li>
+            <li>Linux</li>
+            <li>Git</li>
+        </ul>
+    </div>
+</div>
+
+<h2>Where I work:</h2>
+<div id="jobs" class="row">
+    <div class="box">
+        <h2>Currently</h2><hr />
+        <div>
+            <h4><a href="https://www.angelo.edu/services/technology/">Server Technician - Angelo State University</a></h4>
+            <p >April 2018 - Present</p>
+            <p>
+                I manage our data center and virtual servers, along with Active Directory and Group Policy for the campus.
+                Virtual server creation and maintenance, monitoring the status of servers and services, writing documentation, 
+                and managing our tape backup library are main things which I currently do. 
+                I also occasionally setup physical hosts and appliances.
+            </p>
+            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, Solarwinds, VMware vCenter, Windows Server Management</p>
+        </div>
+    </div>
+    <div class="box">
+        <h2>Previously</h2><hr />
+        <div>
+            <h4><a href="http://www.generationspaintball.com">Web Administrator - Generations Paintball</a></h4>
+            <p>February 2016 - August 2017</p>
+            <p>I redesigned their website, making it accessible to mobile devices and allowing more customers to interact and learn about the business.</p>
+            <p>Used: Git, HTML/CSS/JavaScript</p>
+            
+            <h4><a href="https://www.angelo.edu/dept/computer_science/">Code Camp Assistant - Angelo State University</a></h4>
+            <p>June 2017</p>
+            <p>Taught students about Java and Unity3D and assisted them on their projects.</p>
+            <p>Used: Java, Unity3D</p>
+        </div>
+    </div>
+</div>
+
 <h2>Projects I've worked on:</h2>
 <div class="row">
     <div class="box">
@@ -9,11 +102,25 @@ layout: default-home
         <div>
             <h4><a href="https://www.angelo.edu/">College!</a></h4>
             <p>
-                I am currently a college student at Angelo State University, studying Computer Science. 
-                I started programming in high school, and had a great teacher. 
-                My first language was Java and I will always remember my first Hello world! 
-                It has inspired me to learn everything I can about programming and I have realized that 
-                computers are only limited to the knowledge and skill of the developer, there's almost no end to what is possible!
+                I am currently a college student at Angelo State University, studying Computer Science and Cybersecurity. 
+                I am in my senior year now, and will be graduating in the fall of 2019.
+                When I graduate I will have a Bachelors of Science in Computer Science with a minor in Cybersecurity, along with a certificate in Cybersecurity.
+                <br />Relevant courses I have taken:
+                  <ul>
+                     <li>Computer Science 1</li>
+                     <li>Computer Science 2</li>
+                     <li>Computer Game Development 1</li>
+                     <li>Java Programming</li>
+                     <li>Data Structures</li>
+                     <li>Web programming</li>
+                     <li>Computer Organization</li>
+                     <li>Algorithmic Languages and Compilers</li>
+                     <li>Computer and Network Security</li>
+                     <li>Software Engineering</li>
+                     <li>Management Information Systems</li>
+                     <li>Information Security and Protection</li>
+                     <li>Digital Footprints</li>
+                  </ul>
                 <br />Used: Assembly, C++, C#, Java, JavaScript, Unity3D
             </p>
         </div>
@@ -47,44 +154,5 @@ layout: default-home
                 <br />Used: BYOND DreamMaker, Git
             </p>
         </div>
-    </div>
-</div>
-
-<h2>Skills I've picked up over the years:</h2>
-<div class="row">
-    <div class="box">
-        <h2>Want to learn</h2><hr />
-        <ul>
-            <li>Python</li>
-            <li>Go</li>
-            <li>Haskell</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>Currently learning</h2><hr />
-        <ul>
-            <li>Rust</li>
-            <li>Active Directory</li>
-            <li>VMware vCenter</li>
-            <li>Solarwinds</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>Somewhat competent</h2><hr />
-        <ul>
-            <li>Ruby/Jekyll</li>
-            <li>HTML/CSS/JavaScript</li>
-            <li>Unity3D</li>
-            <li>G-Suite</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>I use these a lot</h2><hr />
-        <ul>
-            <li>C++</li>
-            <li>Java</li>
-            <li>Linux</li>
-            <li>Git</li>
-        </ul>
     </div>
 </div>
