Grammar is a thing which I need to pay attention to more.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ layout: default-home
    <h2>Hello!</h2><hr />
    <p>
       I started programming in high school, and had a great teacher. 
-      My first language was Java and I will always remember my first <code>Hello world!</code>, 
-      ever since I have been trying to learn everything I can about programming. 
-      I love the fact that computers are only limited to the knowledge and skill of the developer, and there is almost no end to what is possible!
+      My first language was Java and I will always remember my first <code>Hello world</code>. 
+      Ever since then I have been trying to learn everything I can about programming. 
+      The greatest aspect of computer programming to me is the endless possibility and the control that comes with writing software.
+      The amount of knowledge and skill is limited only to the will of the programmer and there is always something new to learn and improve!
       <br />Below you will find some more information about me and what I am currently doing:
    </p>
    </div>
