Teamwork makes the dream work

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ layout: default-home
             <h4><a href="https://www.angelo.edu/services/technology/">Server Technician - Angelo State University</a></h4>
             <p >April 2018 - Present</p>
             <p>
-                I manage our data center and virtual servers, along with Active Directory and Group Policy for the campus.
-                Virtual server creation and maintenance, monitoring the status of servers and services, writing documentation, 
-                and managing our tape backup library are main things which I currently do. 
+                I am part of a team which manages our data center and virtual servers, along with Active Directory and Group Policy for the campus.
+                Virtual server creation and maintenance, monitoring the status of servers and services, 
+                writing documentation, and managing our tape backup library are main things which I currently do. 
                 I also occasionally setup physical hosts and appliances.
             </p>
             <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, Solarwinds, VMware vCenter, Windows Server Management</p>
