Whooo, another semester down

--- a/index.html
+++ b/index.html
@@ -116,13 +116,17 @@ layout: default-home
                      <li>Web programming</li>
                      <li>Computer Organization</li>
                      <li>Algorithmic Languages and Compilers</li>
+                     <li>Computer Networking</li>
                      <li>Computer and Network Security</li>
+                     <li>Offensive Security Techniques</li>
                      <li>Software Engineering</li>
+                     <li>Operating Systems</li>
+                     <li>Ethical Issues in Computing</li>
                      <li>Management Information Systems</li>
                      <li>Information Security and Protection</li>
                      <li>Digital Footprints</li>
                   </ul>
-                <br />Used: Assembly, C++, C#, Java, JavaScript, Unity3D
+                <br />Used: Assembly, C++, C#, Java, JavaScript, Python, Unity3D
             </p>
         </div>
     </div>
@@ -147,6 +151,15 @@ layout: default-home
     <div class="box">
         <h2>End of Life</h2><hr />
         <div>
+            <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler">Team Juice Compiler</a>:</h4>
+            <p>
+                This is the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
+                This was a collaborative effort by <a href="https://github.com/texaszn">Zachary N.</a> and myself, 
+                it takes Pascallite code and generates RAMM Assembly code as the resault. This was written in three stages over the course of 3 months, 
+                however only our final code resault is available in the repository (along with some easter eggs in the code). 
+                I plan on rewriting this in other languages as I learn them.
+                <br />Used: C++, Git, Pascallite, RAMM
+            </p>
             <h4><a href="https://github.com/tgstation/tgstation">/tg/ Station 13: Asteroid Station</a>:</h4>
             <p>
                 Asteroid Station was a collaborative effort between myself and Jordie0608. 
